Fixed margins on iphone

--- a/index.styl
+++ b/index.styl
@@ -42,7 +42,7 @@ body
   margin 0 auto
   width 980px
   overflow-x hidden
-  padding-top 40px
+  padding: 40px 60px 0 80px;
 
 h1, h2, h3
   headerFont()
